Alignment at the footer, face insta web and twetter were changed

--- a/loreal_julio.html
+++ b/loreal_julio.html
@@ -1028,7 +1028,7 @@
                                       "
                                       ><img
                                         class="adapt-img"
-                                        src="https://usmezi.stripocdn.email/content/guids/CABINET_a771711e2f87fd7d8725b0a8dcf7318c7153cfe072639815de038d0e9d4850c6/images/loreal_te_cuenta_4021.jpg"
+                                        src="https://qixeul.stripocdn.email/content/guids/CABINET_99a0964efba876f10cfb0175aa7a80a508c5893c3e81d588691f9adf983cf769/images/footerweb.jpg"
                                         alt
                                         style="
                                           display: block;
@@ -1099,7 +1099,7 @@
                                       "
                                       ><img
                                         class="adapt-img"
-                                        src="https://usmezi.stripocdn.email/content/guids/CABINET_a771711e2f87fd7d8725b0a8dcf7318c7153cfe072639815de038d0e9d4850c6/images/footerinsta.jpg"
+                                        src="https://qixeul.stripocdn.email/content/guids/CABINET_99a0964efba876f10cfb0175aa7a80a508c5893c3e81d588691f9adf983cf769/images/footerinsta.jpg"
                                         alt
                                         style="
                                           display: block;
@@ -1170,7 +1170,7 @@
                                       "
                                       ><img
                                         class="adapt-img"
-                                        src="https://usmezi.stripocdn.email/content/guids/CABINET_a771711e2f87fd7d8725b0a8dcf7318c7153cfe072639815de038d0e9d4850c6/images/loreal_te_cuenta_4022.jpg"
+                                        src="https://qixeul.stripocdn.email/content/guids/CABINET_99a0964efba876f10cfb0175aa7a80a508c5893c3e81d588691f9adf983cf769/images/footerface_GQb.jpg"
                                         alt
                                         style="
                                           display: block;
