--- a/loreal_julio.html
+++ b/loreal_julio.html
@@ -640,7 +640,7 @@
                                       "
                                       ><img
                                         class="adapt-img"
-                                        src="https://qixeul.stripocdn.email/content/guids/CABINET_99a0964efba876f10cfb0175aa7a80a508c5893c3e81d588691f9adf983cf769/images/ltc_julio_capa_3.jpg"
+                                        src="https://qixeul.stripocdn.email/content/guids/CABINET_99a0964efba876f10cfb0175aa7a80a508c5893c3e81d588691f9adf983cf769/images/ltcjulio_capa_4_imagen.png"
                                         alt
                                         style="
                                           display: block;
