images weight was changed

--- a/loreal_julio.html
+++ b/loreal_julio.html
@@ -10,7 +10,7 @@
     <meta name="x-apple-disable-message-reformatting" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="telephone=no" name="format-detection" />
-    <title>Copia de Loreal Diciembre</title>
+    <title>Loreal Julio</title>
     <!--[if (mso 16)]>
       <style type="text/css">
         a {
